--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 MONGO_URI=mongodb://localhost:27017/password_reset_db
 EMAIL_USER=your-email@gmail.com
 EMAIL_PASS=your-email-password
-CLIENT_URL=http://localhost:3000
+CLIENT_URL=
 JWT_SECRET=your-secret-key
 PORT=3000
 NODE_ENV=development
