--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb://localhost:27017/password_reset_db
+MONGO_URI=mongodb+srv://vidhyapramila5898:FWt8Kn9z6BcS5DWm@cluster0.b28ll.mongodb.net/recipeDB?retryWrites=true&w=majority&appName=Cluster0
 EMAIL_USER=your-email@gmail.com
 EMAIL_PASS=your-email-password
 CLIENT_URL=
